Mon Oct 20 20:03:10 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimPrefsDialog.cpp:
	  - Added icons to the tabs in the preferences.

Mon Oct 20 18:51:09 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	  - Show the preferences dialog full-screen.

	* src/QGaimPrefsDialog.cpp:
	  - The tab widget in the prefs dialog now takes up the whole dialog.

Mon Oct 20 18:46:22 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	  - Added the Preferences item to the drop-down menu in the buddy list.

Mon Oct 20 18:30:35 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimPrefsDialog.cpp:
	* src/QGaimPrefsDialog.h:
	* gaim.pro:
	  - Allow QGaimPrefsDialog to compile.

Sat Sep 27 00:40:09 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	  - Fixed a crash when right-clicking on parts of the buddy list.

Sat Sep 27 00:30:44 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	  - Fixed a crash when pressing the chat button when no nodes are
	    selected.
	  - Changed the default IM and Chat icons to be the New IM and
	    New Chat icons.

Sat Sep 27 00:23:52 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvButton.cpp:
	  - We were connecting signals in the QGaimConvButton destructor.
	    Bad! Those should be disconnected.

Fri Sep 26 23:33:30 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	  - Clicking the IM button on a contact now opens an IM window
	    with the person.

Fri Sep 26 08:42:11 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	  - Toolbar buttons now work correctly with contact support.

Thu Sep 25 16:16:20 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	* src/QGaimBuddyList.cpp:
	* src/QGaimBuddyList.h: